--- a/src/main/resources/templates/lotto/lottoTool.html
+++ b/src/main/resources/templates/lotto/lottoTool.html
@@ -7,10 +7,10 @@
     <meta name="author" charset="PARK GI-PYO">
     <title>project-lottery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/common.css?v=20230525" rel="stylesheet">
-    <link href="/css/header.css?v=20230525" rel="stylesheet">
-    <link href="/css/footer.css?v=20230525" rel="stylesheet">
-    <link href="/css/lotto/lottoTool.css?v=20230525" rel="stylesheet">
+    <link href="/css/common.css?v=20230531" rel="stylesheet">
+    <link href="/css/header.css?v=20230531" rel="stylesheet">
+    <link href="/css/footer.css?v=20230531" rel="stylesheet">
+    <link href="/css/lotto/lottoTool.css?v=20230531" rel="stylesheet">
 </head>
 <body>
 <header id="header">
@@ -19,14 +19,107 @@
 </header>
 <main class="container">
     <div class="content-group">
+        <ul class="nav nav-pills" id="tool-tab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link label-text active" id="recommend-number-tab" data-bs-toggle="pill" data-bs-target="#recommend-number-content" type="button" role="tab" aria-controls="recommend-number-content" aria-selected="true">
+                    추천번호 조합
+                </button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link label-text" id="fixed-number-tab" data-bs-toggle="pill" data-bs-target="#fixed-number-content" type="button" role="tab" aria-controls="fixed-number-content" aria-selected="false">
+                    고정수 조합
+                </button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link label-text" id="negative-number-tab" data-bs-toggle="pill" data-bs-target="#negative-number-content" type="button" role="tab" aria-controls="negative-number-content" aria-selected="false">
+                    제외수 조합
+                </button>
+            </li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane fade show active" id="recommend-number-content" role="tabpanel" aria-labelledby="recommend-number-tab">
+                <div class="tab-content-inner">
+                    <span class="label-title">추천번호 조합</span>
+                    <hr>
+                    <div class="recommend-number-wrapper">
+                        <div class="game-grid-header">
+                            <span class="label-mini-title">게임번호</span>
+                            <span class="label-mini-title">조합번호</span>
+                            <span class="label-mini-title">좋아요</span>
+                        </div>
+                        <div class="game-grid" id="recommend-game-grid"></div>
+                        <hr>
+                        <button class="btn btn-primary label-text" type="button" id="recommend-btn">생성</button>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="fixed-number-content" role="tabpanel" aria-labelledby="fixed-number-tab">
+                <div class="tab-content-inner">
+                    <span class="label-title">고정수 조합</span>
+                    <hr>
+                    <div class="lotto-paper">
+                        <div class="omr-check-wrapper">
+                            <div class="number-grid">
+                                <div class="check-cell">
+                                    <div class="check-cell-inner">
+                                        <input type="checkbox" name="fixed-number1" id="fixed-number1" value="1">
+                                        <label for="fixed-number1">1</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="fixed-number-wrapper">
+                        <div class="game-grid-header">
+                            <span class="label-mini-title">게임번호</span>
+                            <span class="label-mini-title">조합번호</span>
+                            <span class="label-mini-title">좋아요</span>
+                        </div>
+                        <div class="game-grid" id="fixed-game-grid"></div>
+                        <hr>
+                        <button class="btn btn-primary label-text" type="button" id="fixed-btn">생성</button>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="negative-number-content" role="tabpanel" aria-labelledby="negative-number-tab">
+                <div class="tab-content-inner">
+                    <span class="label-title">제외수 조합</span>
+                    <hr>
+                    <div class="negative-number-wrapper">
+                        <div class="lotto-paper">
+                            <div class="omr-check-wrapper">
+                                <div class="number-grid">
+                                    <div class="check-cell">
+                                        <div class="check-cell-inner">
+                                            <input type="checkbox" name="negative-number1" id="negative-number1" value="1">
+                                            <label for="negative-number1">1</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="game-grid-header">
+                            <span class="label-mini-title">게임번호</span>
+                            <span class="label-mini-title">조합번호</span>
+                            <span class="label-mini-title">좋아요</span>
+                        </div>
+                        <div class="game-grid" id="negative-game-grid"></div>
+                        <hr>
+                        <button class="btn btn-primary label-text" type="button" id="negative-btn">생성</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 <script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="/js/lotto/lottoTool.js?v=20230525"></script>
-<script type="text/javascript" src="/js/footer.js?v=20230525"></script>
-<script type="text/javascript" src="/js/header.js?v=20230525"></script>
+<script type="text/javascript" src="/js/lotto/lottoTool.js?v=20230531"></script>
+<script type="text/javascript" src="/js/footer.js?v=20230531"></script>
+<script type="text/javascript" src="/js/header.js?v=20230531"></script>
 <footer id="footer">
     <hr>
     footer 삽입부
