[feat] #123 : 구매 내역 관련 client-side 개발
저장된 구매 내역을 조회할 수 있는 client-side view 를 개발했다.

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -63,6 +63,10 @@ body {
     background-color: #b0d840;
 }
 
+.ball.na {
+    background-color: #333333;
+}
+
 .ico {
     width: 25px;
     margin: -4px 3px 0 5px;
