--- a/src/main/resources/templates/purchase/purchaseLottoResult.html
+++ b/src/main/resources/templates/purchase/purchaseLottoResult.html
@@ -7,84 +7,88 @@
     <meta name="author" charset="PARK GI-PYO">
     <title>project-lottery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/common.css?v=20230525" rel="stylesheet">
-    <link href="/css/header.css?v=20230525" rel="stylesheet">
-    <link href="/css/footer.css?v=20230525" rel="stylesheet">
-    <link href="/css/purchase/purchaseLottoResult.css?v=20230525" rel="stylesheet">
+    <link href="/css/common.css?v=20230531" rel="stylesheet">
+    <link href="/css/header.css?v=20230531" rel="stylesheet">
+    <link href="/css/footer.css?v=20230531" rel="stylesheet">
+    <link href="/css/purchase/purchaseLottoResult.css?v=20230531" rel="stylesheet">
 </head>
 <body>
 <header id="header">
     header 삽입부
     <hr>
 </header>
+<!-- BEGIN alert container -->
+<div class="alert-container">
+    <div class="alert alert-danger label-bold-wrap-text">
+        <span></span>
+    </div>
+    <div class="alert alert-success label-bold-wrap-text">
+        <span></span>
+    </div>
+</div>
+<!-- END alert container -->
 <main class="container">
     <div class="content-group">
-        <div class="alert alert-success">
-            <span class="label-text">정상적으로 구매되었습니다.</span>
+        <!-- BEGIN 회차 선택 selector -->
+        <div class="search-group">
+            <form method="get" action="/purchase/dh/L645/result" id="purchase-result-search-form">
+                <select class="form-select label-text" name="drawNo" id="purchase-draw-no">
+                    <option>0회</option>
+                </select>
+            </form>
         </div>
+        <!-- END 회차 선택 selector -->
+        <!-- BEGIN 로또 구매 내역 -->
         <div class="purchased-group">
+            <span class="label-title" id="draw-no">0회</span>
             <span class="label-title">구매 내역</span>
             <hr>
             <div class="purchased-number-wrapper">
-                <span class="label-title" id="draw-no">0회</span>
+                <div id="purchased-none">
+                    <span class="label-text">조회 결과가 없습니다.</span>
+                </div>
                 <div class="game-grid">
-                    <div class="game-numbers">
-                        <p class="label-mini-title">Game 1</p>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
+                    <div class="game-grid-header">
+                        <span class="label-mini-title">게임번호</span>
+                        <span class="label-mini-title">조합번호</span>
+                        <span class="label-mini-title">좋아요</span>
                     </div>
-                    <div class="game-numbers">
-                        <p class="label-mini-title">Game 2</p>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                    </div>
-                    <div class="game-numbers">
-                        <p class="label-mini-title">Game 3</p>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                    </div>
-                    <div class="game-numbers">
-                        <p class="label-mini-title">Game 4</p>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                    </div>
-                    <div class="game-numbers">
-                        <p class="label-mini-title">Game 5</p>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
-                        <span class="ball"></span>
+                    <div class="game">
+                        <div class="game-numbers">
+                            <div class="game-header">
+                                <span class="label-mini-title">Game 0</span>
+                                <span class="label-mini-title">자동</span>
+                            </div>
+                            <span class="ball"></span>
+                            <span class="ball"></span>
+                            <span class="ball"></span>
+                            <span class="ball"></span>
+                            <span class="ball"></span>
+                            <span class="ball"></span>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                        <div class="game-time">
+                            <span class="label-text fas fa-clock">&nbsp;</span>
+                            <span class="label-mini-title">1900-01-01 00:00:00</span>
+                        </div>
+                        <hr class="no-margin-hr">
+                        <div class="game-result">
+                            <span class="label-text fas">&nbsp;</span>
+                            <span class="label-mini-title">미추첨</span>
+                        </div>
                     </div>
                 </div>
-                <button class="btn btn-primary label-text" type="button" id="confirm-btn">확인</button>
             </div>
         </div>
+        <!-- END 로또 구매 내역 -->
     </div>
 </main>
 <script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<script type="text/javascript" src="/js/purchase/purchaseLottoResult.js?v=20230525"></script>
-<script type="text/javascript" src="/js/footer.js?v=20230525"></script>
-<script type="text/javascript" src="/js/header.js?v=20230525"></script>
+<script type="text/javascript" src="/js/purchase/purchaseLottoResult.js?v=20230531"></script>
+<script type="text/javascript" src="/js/footer.js?v=20230531"></script>
+<script type="text/javascript" src="/js/header.js?v=20230531"></script>
 <footer id="footer">
     <hr>
     footer 삽입부
