[feat] #127 : view 디자인 수정
개발이 진행됨에 따라 client-side view 디자인을 전체적으로 조금씩 다듬었다.

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -80,6 +80,14 @@
     color: #fbc400;
 }
 
+.kakao-login, .kakao-logout {
+    background: #fce333;
+}
+
+.fa-comment, .fa-right-from-bracket {
+    color: #171602;
+}
+
 @media (max-width: 768px) {
     .desktop-menu-inner {
         justify-content: center;
