--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,36 @@
             <div class="timer-info">
                 <div class="timer-draw-no"></div>
                 <div class="timer-text"></div>
-                <div class="timer-remain"></div>
+                <div class="timer-remain-group">
+                    <div>
+                        <div class="timer-remain timer-day"></div>
+                        <span class="label-mini-title">일</span>
+                    </div>
+                    <div>
+                        <span class="label-title">&nbsp;</span>
+                        <span class="label-mini-title">&nbsp;</span>
+                    </div>
+                    <div>
+                        <div class="timer-remain timer-hour"></div>
+                        <span class="label-mini-title">시간</span>
+                    </div>
+                    <div>
+                        <span class="label-title">:</span>
+                        <span class="label-mini-title">&nbsp;</span>
+                    </div>
+                    <div>
+                        <div class="timer-remain timer-min"></div>
+                        <span class="label-mini-title">분</span>
+                    </div>
+                    <div>
+                        <span class="label-title">:</span>
+                        <span class="label-mini-title">&nbsp;</span>
+                    </div>
+                    <div>
+                        <div class="timer-remain timer-sec"></div>
+                        <span class="label-mini-title">초</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -75,9 +104,9 @@
         <div class="card" id="link-lotto-tool">
             <div class="card-body">
                 <span class="card-title label-title">
-                    <i class="fas fa-screwdriver-wrench">&nbsp;</i>로또도구
+                    <i class="fas fa-screwdriver-wrench">&nbsp;</i>로또조합도구
                 </span>
-                <p class="card-text label-text">유용한 로또 도구가 필요하신가요?</p>
+                <p class="card-text label-text">로또 번호 조합이 필요하신가요?</p>
                 <a href="/L645/tool" class="btn btn-primary label-text">Go</a>
             </div>
         </div>
@@ -86,7 +115,7 @@
                 <span class="card-title label-title">
                     <i class="fas fa-chart-simple">&nbsp;</i>로또분석
                 </span>
-                <p class="card-text label-text">다양한 로또 분석 결과가 궁금하신가요?</p>
+                <p class="card-text label-text">로또 분석 결과가 궁금하신가요?</p>
                 <a href="/L645/analysis" class="btn btn-primary label-text">Go</a>
             </div>
         </div>
