--- a/src/main/resources/templates/lotto/lottoTool.html
+++ b/src/main/resources/templates/lotto/lottoTool.html
@@ -39,7 +39,10 @@
         <div class="tab-content">
             <div class="tab-pane fade show active" id="recommend-number-content" role="tabpanel" aria-labelledby="recommend-number-tab">
                 <div class="tab-content-inner">
-                    <span class="label-title">추천번호 조합</span>
+                    <div class="tab-header">
+                        <span class="label-title">추천번호 조합</span>
+                        <a class="btn btn-success label-mini-title" href="/L645/tool/result">내 조합내역 보기</a>
+                    </div>
                     <hr>
                     <div class="recommend-number-wrapper">
                         <div class="game-grid-header">
@@ -55,7 +58,10 @@
             </div>
             <div class="tab-pane fade" id="fixed-number-content" role="tabpanel" aria-labelledby="fixed-number-tab">
                 <div class="tab-content-inner">
-                    <span class="label-title">고정수 조합</span>
+                    <div class="tab-header">
+                        <span class="label-title">고정수 조합</span>
+                        <a class="btn btn-success label-mini-title" href="/L645/tool/result">내 조합내역 보기</a>
+                    </div>
                     <hr>
                     <div class="lotto-paper">
                         <div class="omr-check-wrapper">
@@ -84,7 +90,10 @@
             </div>
             <div class="tab-pane fade" id="negative-number-content" role="tabpanel" aria-labelledby="negative-number-tab">
                 <div class="tab-content-inner">
-                    <span class="label-title">제외수 조합</span>
+                    <div class="tab-header">
+                        <span class="label-title">제외수 조합</span>
+                        <a class="btn btn-success label-mini-title" href="/L645/tool/result">내 조합내역 보기</a>
+                    </div>
                     <hr>
                     <div class="negative-number-wrapper">
                         <div class="lotto-paper">
