--- a/src/main/resources/templates/lotto/userCombinationResult.html
+++ b/src/main/resources/templates/lotto/userCombinationResult.html
@@ -37,8 +37,12 @@
         <!-- END 회차 선택 selector -->
         <!-- BEGIN 로또 번호 조합 내역 -->
         <div class="combination-group">
-            <span class="label-title" id="draw-no">0회</span>
-            <span class="label-title">조합 내역</span>
+            <div class="group-header">
+                <span class="label-title" id="draw-no">0회</span>
+                <span class="label-title">&nbsp;</span>
+                <span class="label-title">조합 내역</span>
+                <a class="btn btn-success label-mini-title" href="/L645/tool">조합하러 가기</a>
+            </div>
             <hr>
             <div class="combination-number-wrapper">
                 <div id="combination-none">
