--- a/src/main/resources/templates/purchase/dhLogin.html
+++ b/src/main/resources/templates/purchase/dhLogin.html
@@ -45,7 +45,28 @@
                 <div class="timer-info">
                     <div class="timer-draw-no"></div>
                     <div class="timer-text"></div>
-                    <div class="timer-remain"></div>
+                    <div class="timer-remain-group">
+                        <div>
+                            <div class="timer-remain timer-hour"></div>
+                            <span class="label-mini-title">시간</span>
+                        </div>
+                        <div>
+                            <span class="label-title">:</span>
+                            <span class="label-mini-title">&nbsp;</span>
+                        </div>
+                        <div>
+                            <div class="timer-remain timer-min"></div>
+                            <span class="label-mini-title">분</span>
+                        </div>
+                        <div>
+                            <span class="label-title">:</span>
+                            <span class="label-mini-title">&nbsp;</span>
+                        </div>
+                        <div>
+                            <div class="timer-remain timer-sec"></div>
+                            <span class="label-mini-title">초</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
