--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -39,7 +39,6 @@
 }
 
 .timer-info {
-    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -63,14 +62,34 @@
     text-align: center;
     width: 100%;
     color: #6c6c6c;
+    margin-bottom: 10px;
+}
+
+.timer-remain-group {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    align-items: center;
+    align-content: center;
+}
+
+.timer-remain-group div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
 }
 
 .timer-remain {
     font-size: 40px;
     font-weight: bold;
     text-align: center;
-    width: 100%;
-    color: #333;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+    background: black;
+    color: white;
+    padding: 0 10px;
 }
 /* END 로또 회차 타이머 */
 
@@ -114,7 +133,7 @@
     }
 
     .timer-remain {
-        font-size: 38px;
+        font-size: 30px;
     }
 
     .card-text {
@@ -132,7 +151,7 @@
     }
 
     .timer-remain {
-        font-size: 36px;
+        font-size: 25px;
     }
 }
 
@@ -146,6 +165,6 @@
     }
 
     .timer-remain {
-        font-size: 35px;
+        font-size: 20px;
     }
 }
