[fix] #147 : 디자인 오류 수정
사용에는 전혀 문제가 없는 디자인 오류지만, 오류 수정 pr 처리하는 김에 같이 처리한다.

--- a/src/main/resources/static/css/lotto/lottoTool.css
+++ b/src/main/resources/static/css/lotto/lottoTool.css
@@ -149,6 +149,11 @@ button {
 
 .fa-heart {
     cursor: pointer;
+    color: #cccccc;
+}
+
+.fas.fa-heart.liked {
+    color: #ff7272;
 }
 
 .tab-header {
