--- a/src/main/resources/static/css/purchase/purchaseLottoResult.css
+++ b/src/main/resources/static/css/purchase/purchaseLottoResult.css
@@ -50,6 +50,10 @@
     justify-content: space-between;
 }
 
+.game-grid-header.display-none {
+    display: none;
+}
+
 .game-grid-header span {
     color: white;
 }
@@ -151,6 +155,11 @@
 
 .fa-heart {
     cursor: pointer;
+    color: #cccccc;
+}
+
+.fas.fa-heart.liked {
+    color: #ff7272;
 }
 
 @media screen and (max-width: 768px) {
