[feat] #165 - index page 에러 메시지 표시
access denied handler 를 통해 권한 불충분으로 index page 로 redirection 되는 경우, 에러 메시지를 표시할 수 있도록 수정했다.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,13 @@
     header 삽입부
     <hr>
 </header>
+
+<div class="alert-container">
+    <div class="alert alert-danger label-bold-wrap-text">
+        <span></span>
+    </div>
+</div>
+
 <main class="container">
     <!-- BEGIN 로또 회차 타이머 -->
     <div class="lotto-timer">
