[feat] #167 - 신흥명당 목록 view
기존 로또명당 view 를 tab 으로 분리하였다.
1. 로또명당 - 262회부터 모든 회차의 판매점 배출 등위를 합산한 결과
2. 신흥명당 - 최근 52회차 동안의 판매점 배출 등위를 합산한 결과

--- a/src/main/resources/static/css/shop/shopRanking.css
+++ b/src/main/resources/static/css/shop/shopRanking.css
@@ -1,3 +1,21 @@
+.nav-link  {
+    color: white;
+}
+
+.tab-header {
+    text-align: right;
+}
+
+.label-white {
+    color: white;
+}
+
+.tab-content {
+    display: grid;
+    gap: 10px;
+    width: 100%;
+}
+
 .accordion {
     width: 100%;
 }
