[feat] #171 - 로또명당 페이지 css 수정
모든 페이지에서 통일된 느낌을 주기 위해 적정 간격이나, 디자인을 맞춰두었다.
직전 PR 에서 페이지 수정 후, 디자인이 조금 달라져 통일시키기 위해 css 를 수정했다.

--- a/src/main/resources/static/css/shop/shopRanking.css
+++ b/src/main/resources/static/css/shop/shopRanking.css
@@ -12,8 +12,12 @@
 
 .tab-content {
     display: grid;
-    gap: 10px;
     width: 100%;
+}
+
+.tab-content-inner {
+    display: grid;
+    gap: 5px;
 }
 
 .accordion {
@@ -31,7 +35,6 @@
     border: none;
     border-radius: 5px;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
-    margin-top: 5px;
     transition: all 0.1s ease-in-out;
 }
 
