--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -7,8 +7,8 @@
     <meta name="author" charset="PARK GI-PYO">
     <title>project-lottery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/common.css?v=2023061022" rel="stylesheet">
-    <link href="/css/header.css?v=2023061022" rel="stylesheet">
+    <link href="/css/common.css?v=2024030511" rel="stylesheet">
+    <link href="/css/header.css?v=2024030511" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -19,18 +19,21 @@
                 <img src="/img/ico-logo.png">
             </a>
             <div class="desktop-menu-link">
-                <a href="/">홈</a>
-                <a href="/shop/list">로또판매점</a>
-                <a href="/shop/ranking">로또명당</a>
-                <a href="/L645">로또추첨결과</a>
-                <a href="/purchase/dh/login">로또구매</a>
-                <a href="/L645/tool">로또조합</a>
-                <a href="/L645/analysis">로또분석</a>
-                <a class="kakao-login label-mini-title btn btn-warning" href="/oauth2/authorization/kakao">
-                    <i class="fas fa-comment">&nbsp;로그인</i>
+                <a class="label-mini-title" href="/shop/list">로또판매점</a>
+                <a class="label-mini-title" href="/shop/ranking">로또명당</a>
+                <a class="label-mini-title" href="/L645">로또추첨결과</a>
+                <a class="label-mini-title" href="/purchase/dh/login">로또구매</a>
+                <a class="label-mini-title" href="/L645/tool">로또조합</a>
+                <a class="label-mini-title" href="/L645/analysis">로또분석</a>
+                <a class="label-mini-title role-user" href="/">마이페이지</a>
+                <a class="label-mini-title role-admin" href="/admin">관리자페이지</a>
+                <a class="kakao-login label-mini-title" href="/oauth2/authorization/kakao">
+                    <i class="fas fa-comment"></i>
+                    <span>로그인</span>
                 </a>
-                <a class="kakao-logout label-mini-title btn btn-warning" href="/user/logout">
-                    <i class="fas fa-right-from-bracket">&nbsp;로그아웃</i>
+                <a class="kakao-logout label-mini-title" href="/user/logout">
+                    <i class="fas fa-right-from-bracket"></i>
+                    <span>로그아웃</span>
                 </a>
             </div>
         </div>
@@ -40,24 +43,12 @@
     <!-- BEGIN 모바일 스크롤 메뉴 -->
     <div class="offcanvas offcanvas-end" tabindex="-1" id="menu-bar" aria-labelledby="menu-bar-label">
         <div class="offcanvas-header">
-            <div class="mobile-menu-link-vertical" id="menu-bar-label">
-                <a class="kakao-login label-mini-title btn btn-warning" href="/oauth2/authorization/kakao">
-                    <i class="fas fa-comment">&nbsp;로그인</i>
-                </a>
-                <a class="kakao-logout label-mini-title btn btn-warning" href="/user/logout">
-                    <i class="fas fa-right-from-bracket">&nbsp;로그아웃</i>
-                </a>
-            </div>
+            <div class="mobile-menu-link-vertical" id="menu-bar-label"></div>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <hr>
         <div class="offcanvas-body">
             <div class="mobile-menu-link-vertical">
-                <a class="label-text" href="/">
-                    <i class="fas fa-house"></i>
-                    <span>홈</span>
-                </a>
-                <hr>
                 <a class="label-text" href="/shop/list">
                     <i class="fas fa-map-location-dot"></i>
                     <span>로또판매점</span>
@@ -73,29 +64,50 @@
                     <span>로또추첨결과</span>
                 </a>
                 <hr>
-                <a class="label-text" href="/purchase/dh/login">
-                    <i class="fas fa-wallet"></i>
-                    <span>로또구매</span>
-                </a>
-                <br>
-                <a class="label-text" href="/purchase/dh/L645/result">
-                    <span>&nbsp;&nbsp;&nbsp;-</span>
-                    <span>로또구매내역</span>
-                </a>
+                <div class="sub-menu-set">
+                    <a class="label-text" href="/purchase/dh/login">
+                        <i class="fas fa-wallet"></i>
+                        <span>로또구매</span>
+                    </a>
+                    <a class="label-text" href="/purchase/dh/L645/result">
+                        <span>&nbsp;&nbsp;&nbsp;└</span>
+                        <span>구매내역</span>
+                    </a>
+                </div>
                 <hr>
-                <a class="label-text" href="/L645/tool">
-                    <i class="fas fa-screwdriver-wrench"></i>
-                    <span>로또조합</span>
-                </a>
-                <br>
-                <a class="label-text" href="/L645/tool/result">
-                    <span>&nbsp;&nbsp;&nbsp;-</span>
-                    <span>로또조합내역</span>
-                </a>
+                <div class="sub-menu-set">
+                    <a class="label-text" href="/L645/tool">
+                        <i class="fas fa-screwdriver-wrench"></i>
+                        <span>로또조합</span>
+                    </a>
+                    <a class="label-text" href="/L645/tool/result">
+                        <span>&nbsp;&nbsp;&nbsp;└</span>
+                        <span>조합내역</span>
+                    </a>
+                </div>
                 <hr>
                 <a class="label-text" href="/L645/analysis">
                     <i class="fas fa-chart-simple"></i>
                     <span>로또분석</span>
+                </a>
+                <hr class="role-user">
+                <a class="label-text role-user" href="/">
+                    <i class="fas fa-user"></i>
+                    <span>마이페이지</span>
+                </a>
+                <hr class="role-admin">
+                <a class="label-text role-admin" href="/admin">
+                    <i class="fas fa-user-secret"></i>
+                    <span>관리자페이지</span>
+                </a>
+                <hr>
+                <a class="label-text kakao-login" href="/oauth2/authorization/kakao">
+                    <i class="fas fa-comment"></i>
+                    <span>로그인</span>
+                </a>
+                <a class="label-text kakao-logout" href="/user/logout">
+                    <i class="fas fa-right-from-bracket"></i>
+                    <span>로그아웃</span>
                 </a>
             </div>
         </div>
@@ -123,6 +135,6 @@
 <script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="/js/header.js?v=2023061022"></script>
+<script type="text/javascript" src="/js/header.js?v=2024030511"></script>
 </body>
 </html>
