--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -49,6 +49,11 @@
         <hr>
         <div class="offcanvas-body">
             <div class="mobile-menu-link-vertical">
+                <a class="label-text" href="/L645">
+                    <i class="fas fa-medal"></i>
+                    <span>로또추첨결과</span>
+                </a>
+                <hr>
                 <a class="label-text" href="/shop/list">
                     <i class="fas fa-map-location-dot"></i>
                     <span>로또판매점</span>
@@ -59,29 +64,24 @@
                     <span>로또명당</span>
                 </a>
                 <hr>
-                <a class="label-text" href="/L645">
-                    <i class="fas fa-medal"></i>
-                    <span>로또추첨결과</span>
-                </a>
-                <hr>
                 <div class="sub-menu-set">
                     <a class="label-text" href="/purchase/dh/login">
-                        <i class="fas fa-wallet"></i>
+                        <i class="fas fa-won-sign"></i>
                         <span>로또구매</span>
                     </a>
                     <a class="label-text" href="/purchase/dh/L645/result">
-                        <span>&nbsp;&nbsp;&nbsp;└</span>
+                        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9654;</span>
                         <span>구매내역</span>
                     </a>
                 </div>
                 <hr>
                 <div class="sub-menu-set">
                     <a class="label-text" href="/L645/tool">
-                        <i class="fas fa-screwdriver-wrench"></i>
+                        <i class="fas fa-shuffle"></i>
                         <span>로또조합</span>
                     </a>
                     <a class="label-text" href="/L645/tool/result">
-                        <span>&nbsp;&nbsp;&nbsp;└</span>
+                        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9654;</span>
                         <span>조합내역</span>
                     </a>
                 </div>
@@ -97,7 +97,7 @@
                 </a>
                 <hr class="role-admin">
                 <a class="label-text role-admin" href="/admin">
-                    <i class="fas fa-user-secret"></i>
+                    <i class="fas fa-screwdriver-wrench"></i>
                     <span>관리자페이지</span>
                 </a>
                 <hr>
