--- a/src/main/resources/templates/index.th.xml
+++ b/src/main/resources/templates/index.th.xml
@@ -4,6 +4,6 @@
     <attr sel="#footer" th:replace="~{footer :: footer}"/>
 
     <attr sel=".alert-danger" th:if="${isDenied}">
-        <attr sel="span" th:class="'fas fa-circle-exclamation'" th:text="'관리자 권한이 필요합니다.'"/>
+        <attr sel="span" th:class="'fas fa-circle-exclamation'" th:text="'페이지 접근 권한이 없습니다.'"/>
     </attr>
 </thlogic>
